@@ -17,6 +17,7 @@ Issue #1739 Publish-BcContainerApp fails with "The remote server returned an err
 Issue #1736 Support specifying a folder (of apps) to Run-AlValidation, Run-AlCops, Run-AlPipeline, Publish-BcContainerApp, Publish-PerTenantExtensionApps and Convert-BcAppsToRuntimePackages
 Issue #1740 Missing help for disabledTests parameter
 Issue #1744 if New-BcAuthContext with client credentials fails, the real error is not shown
+Issue #1726 Add switch -throwOnError to Run-AlValidation
 
 2.0.5
 Issue #1668 Run-AlValidation fails if app filename has a comma (and there is only one app)
